# canoe-node-layer-dll

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/skills/extend-existing-nodelayer/: SKILL.md
assets/screenshots/: README.md
scripts/: build-mingw32.ps1  build-msvc-win32.ps1
sources/: NodeLayer.cpp  NodeLayer.def  NodeLayerDLL.cpp
tools/: build-mingw32.cmd  build-mingw32.ps1  build-msvc-win32.cmd  build-msvc-win32.ps1
